[package]
name = "tuf-keyid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
olpc-cjson = "0.1.2"
serde_json = "1.0.91"
serde = "1.0.152"
ring = { version = "0.16.16", features = ["std"] }
clap = { version = "4.1.1", features = ["derive"] }

[[bin]]
name = "tuf-keyid"
path = "src/main.rs"
